--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
-html{
+html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-li{
+li {
   list-style: none;
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
